@@ -513,7 +513,7 @@ sub replace_button {
 
 	# Generate the search object
 	my $search = $self->as_search;
-	unless ($search) {
+	unless ( $search ) {
 		$main->error("Not a valid search");
 		# Move the focus back to the search text
 		# so they can tweak their search.
@@ -521,93 +521,71 @@ sub replace_button {
 		return;
 	}
 
-	# Apply the search to the current editor.
-	# The while is here to support replace_all without duplicate code in the same modul.
-	my $Replace_Count = 0;
-
-	my $use_search_pm = 0;
-	if ($use_search_pm) {
-		if ( $self->{replace_all}->GetValue ) { # Replace all
-			$Replace_Count = $main->replace_all($search) . "\n";
-			return;
-		} else {
-			$Replace_Count = 1 if $main->replace_next($search);
-		}
-	} else {
-		while ( $main->replace_next($search) ) {
-			++$Replace_Count;
-			$self->{replace_all}->GetValue or last; # Replace all
-			next if $Replace_Count < 100;
-
-			# This is just left here to have working replace function until Search.pm
-			# is fixed:
-			$main->message( 'This replace_all function could cause a endless loop '
-					. 'and should be removed as soon as Search.pm is repaired. '
-					. 'Your replace_all run has been aborted after 100 replaces, '
-					. 'click the button again to continue.', 'Warning' );
-			last;
-		}
+	# If we are replacing everything, hand off to the other method
+	if ( $self->{replace_all}->GetValue ) {
+		return $self->replace_all;
 	}
 
-	# If we're only searching once, we won't need the dialog any more
-	if ( $Replace_Count and $self->{find_first}->GetValue ) {
-		$self->Hide;
-	} elsif ( $Replace_Count > 1 ) {
-		$main->message(
-			sprintf( Wx::gettext('Replaced %d matches'), $Replace_Count ),
-			Wx::gettext('Search and Replace')
-		);
-		# Move the focus back to the search text
-		# so they can tweak their search.
-		$self->{find_text}->SetFocus;
-	} elsif ( $Replace_Count == 0 ) {
+	# Just replace once
+	my $changed = $main->replace_next($search);
+	unless ( $changed ) {
 		$main->message(
 			Wx::gettext('No matches found'),
 			Wx::gettext('Search and Replace'),
 		);
-		# Move the focus back to the search text
-		# so they can tweak their search.
-		$self->{find_text}->SetFocus;
 	}
+
+	# Move the focus back to the search text
+	# so they can change it if they want.
+	$self->{find_text}->SetFocus;
 
 	return;
 }
 
-# TO DO: This function doesn't seem to work anymore, so it's now scheduled for removal
-#       It's still here because it's unclear if there may be references to it.
-#
-#=pod
-#
-#=head2 replace_all
-#
-#  $self->replace_all;
-#
-#Executed when Replace All button is clicked.
-#
-#Replace all appearances of given string in the current document.
-#
-#=cut
-#
-#sub replace_all {
-#	my $self   = shift;
-#	my $main   = $self->main;
-#	my $config = $self->save;
-#
-#	# Generate the search object
-#	my $search = $self->as_search;
-#	unless ( $search ) {
-#		$main->error("Not a valid search");
-#		return;
-#	}
-#
-#	# Apply the search to the current editor
-#	$main->replace_all($search);
-#
-#	# Close the dialog
-#	$self->Hide;
-#
-#	return;
-#}
+=pod
+
+=head2 replace_all
+
+  $self->replace_all;
+
+Executed when Replace All button is clicked.
+
+Replace all appearances of given string in the current document.
+
+=cut
+
+sub replace_all {
+	my $self   = shift;
+	my $main   = $self->main;
+	my $config = $self->save;
+
+	# Generate the search object
+	my $search = $self->as_search;
+	unless ( $search ) {
+		$main->error("Not a valid search");
+		return;
+	}
+
+	# Apply the search to the current editor
+	my $changes = $main->replace_all($search);
+	if ( $changes ) {
+		$main->message(
+			sprintf( Wx::gettext('Replaced %d matches'), $changes ),
+			Wx::gettext('Search and Replace')
+		);
+	} else {
+		$main->message(
+			Wx::gettext('No matches found'),
+			Wx::gettext('Search and Replace'),
+		);
+	}
+
+	# Move the focus back to the search text
+	# so they can change it if they want.
+	$self->{find_text}->SetFocus;
+
+	return;
+}
 
 
 
